Update to angular v5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
   ],
   "angularCompilerOptions": {
     "strictMetadataEmit": true,
-    "skipTemplateCodegen": true
+    "skipTemplateCodegen": true,
+    "preserveWhitespaces": "off"
   }
 }
