--- a/projects/angular2-grid/package.json
+++ b/projects/angular2-grid/package.json
@@ -1,10 +1,6 @@
 {
   "name": "angular2-grid",
-  "version": "2.2.1",
-  "description": "A grid-based drag/drop/resize directive plugin for Angular 2",
-  "module": "main.js",
-  "main": "bundles/NgGrid.umd.min.js",
-  "typings": "main.d.ts",
+  "version": "3.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/BTMorton/angular2-grid.git"
@@ -37,9 +33,7 @@
   },
   "homepage": "https://github.com/BTMorton/angular2-grid",
   "peerDependencies": {
-    "@angular/core": ">=2 <=5",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.1",
-    "zone.js": "^0.7.2"
+    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
+    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
   }
 }
